--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,9 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.ipp": "cpp",
+        "*.txx": "cpp"
     },
     "cmake.configureOnOpen": true
 }
