--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ if (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
     message("embed_platform on")
     include_directories(/usr/local/cuda/targets/aarch64-linux/include)
     link_directories(/usr/local/cuda/targets/aarch64-linux/lib)
-    link_directories(/usr/lib/aarch64-linux-gnu)    # 字体渲染库，libfreetype的位置
+#    link_directories(/usr/lib/aarch64-linux-gnu)    # 字体渲染库，libfreetype的位置
     include_directories(/usr/include/gstreamer-1.0)
     include_directories(/usr/lib/aarch64-linux-gnu/glib-2.0/include)
 else()
@@ -225,8 +225,8 @@ add_executable(Analyzer src/analyze.cpp
 target_link_libraries(Analyzer ${catkin_LIBRARIES})
 add_dependencies(Analyzer ${PROJECT_NAME}_generate_messages_cpp)
 
-add_executable(Renderer src/render.cpp
-        src/font/CvxText.cpp src/font/CvxText.h)
+add_executable(Renderer src/render.cpp)
+#        src/font/CvxText.cpp src/font/CvxText.h)
 target_link_libraries(Renderer ${catkin_LIBRARIES})
 add_dependencies(Renderer ${PROJECT_NAME}_generate_messages_cpp)
 
@@ -280,7 +280,7 @@ target_link_libraries(Identifier sqlite3)
 
 include_directories(/usr/include/freetype2)
 include_directories(/usr/include/libxml2)
-target_link_libraries(Renderer freetype)
+#Starget_link_libraries(Renderer freetype)
 target_link_libraries(Analyzer xml2)
 target_link_libraries(Identifier xml2)
 
